fix(index.scss): fixed the jumping background
As the height of the containter is changing with every change to the children, the background was
jumping. The background has now a jumping context.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,7 +27,7 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  min-height: 100dvh;
   background-image: url('/images/bg-main-mobile.png');
   background-size: contain;
   background-repeat: no-repeat;
